A couple of bug fixes in deserialization code.

--- a/Mode analysis examples.ipynb
+++ b/Mode analysis examples.ipynb
@@ -4455,13 +4455,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import json"
+    "import json\n",
+    "import ast"
    ]
   },
   {
@@ -4508,7 +4509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -4516,18 +4517,38 @@
    "source": [
     "def json_to_ensemble(s):\n",
     "    d = json.loads(s)\n",
-    "    x = np.array(d['x'])\n",
-    "    v = np.array(d['v'])\n",
+    "    x = np.array(ast.literal_eval(d['x']))\n",
+    "    v = np.array(ast.literal_eval(d['v']))\n",
     "    ensemble_properties = d['ensemble_properties']\n",
     "    particle_properties = {}\n",
     "    for key, val in d['particle_properties']:\n",
-    "        particle_properties[key] = np.array(val)\n",
+    "        particle_properties[key] = np.array(ast.literal_eval(val))\n",
     "    num_ptcls = x.shape[0]\n",
-    "    ensemble = Ensemble(num_ptcls)\n",
+    "    ensemble = coldatoms.Ensemble(num_ptcls)\n",
     "    ensemble.x = x\n",
     "    ensemble.v = v\n",
     "    ensemble.ensemble_properties = ensemble_properties\n",
-    "    ensemble.particle_properties = particle_properties"
+    "    ensemble.particle_properties = particle_properties\n",
+    "    return ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(127, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "round_trip = json_to_ensemble(ensemble_to_json(my_ensemble))"
    ]
   },
   {
