Serialize to file and restore.

--- a/Mode analysis examples.ipynb
+++ b/Mode analysis examples.ipynb
@@ -4553,6 +4553,199 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "my_ensemble = create_ensemble(mode_analysis.uE,\n",
+    "                              mode_analysis.wrot,\n",
+    "                              mode_analysis.m_Be,\n",
+    "                              mode_analysis.q)\n",
+    "with open(\"ensemble.txt\", \"w\") as text_file:\n",
+    "    text_file.write(ensemble_to_json(my_ensemble))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "s=''\n",
+    "with open('ensemble.txt', 'r') as text_file:\n",
+    "    s=text_file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(127, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "round_trip = json_to_ensemble(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  28.72403833   38.18511784    0.        ]\n",
+      " [  11.14923479    0.35959242    0.        ]\n",
+      " [ -27.7428031    53.71564568    0.        ]\n",
+      " [  72.288857     54.37000038    0.        ]\n",
+      " [  43.92197161   22.50702355    0.        ]\n",
+      " [  25.15812165  -15.79798505    0.        ]\n",
+      " [ 101.70163816   19.53830092    0.        ]\n",
+      " [  -0.69423749  100.57876161    0.        ]\n",
+      " [ -11.4605257    -1.30390339    0.        ]\n",
+      " [ -68.39218207  112.57743199    0.        ]\n",
+      " [ -48.52010829   93.51817964    0.        ]\n",
+      " [  87.00430037   37.30369457    0.        ]\n",
+      " [  52.63729387   43.50017339    0.        ]\n",
+      " [ -67.40483327  -26.03815308    0.        ]\n",
+      " [  16.16922084  -35.76030906    0.        ]\n",
+      " [  36.4274329   -95.19675604    0.        ]\n",
+      " [ -62.02872881  -63.9107181     0.        ]\n",
+      " [ -22.30158604  -79.4918393     0.        ]\n",
+      " [   8.04663626  -56.51281545    0.        ]\n",
+      " [ -48.81808091   13.84176528    0.        ]\n",
+      " [ -25.04018056   15.48108632    0.        ]\n",
+      " [ -14.93215267   76.80160055    0.        ]\n",
+      " [ 109.32244195  -85.52134755    0.        ]\n",
+      " [ -98.18232398   95.13350182    0.        ]\n",
+      " [  20.3143265    19.00323725    0.        ]\n",
+      " [ -36.93619477  -58.77839985    0.        ]\n",
+      " [  66.81263766   27.63808477    0.        ]\n",
+      " [ 107.89077077   47.98947307    0.        ]\n",
+      " [ 123.2828289    28.82111946    0.        ]\n",
+      " [   7.54350114   79.04875166    0.        ]\n",
+      " [  34.98075921    2.90537472    0.        ]\n",
+      " [ -72.76983796   12.72457679    0.        ]\n",
+      " [  22.44296611  -75.42462464    0.        ]\n",
+      " [  44.8300928   -70.72040914    0.        ]\n",
+      " [  30.76589971   79.06210169    0.        ]\n",
+      " [ -77.25066826  -47.68590021    0.        ]\n",
+      " [ -65.49194582  -90.51762064    0.        ]\n",
+      " [-122.02159783    8.64119773    0.        ]\n",
+      " [ -87.48924238   31.73946241    0.        ]\n",
+      " [-143.02077299  -35.684968      0.        ]\n",
+      " [ -80.93904201   -7.78461705    0.        ]\n",
+      " [ -50.02608963   50.45230733    0.        ]\n",
+      " [ -37.9871105    32.59558041    0.        ]\n",
+      " [  24.1157724   100.85080898    0.        ]\n",
+      " [  55.26577894   69.94155591    0.        ]\n",
+      " [  36.84409756   58.07172129    0.        ]\n",
+      " [  97.89032614   93.79958128    0.        ]\n",
+      " [  43.8675643   119.34431883    0.        ]\n",
+      " [  71.91143663  109.34625379    0.        ]\n",
+      " [ 146.20201814  -10.90021056    0.        ]\n",
+      " [ 122.84760772    3.90704501    0.        ]\n",
+      " [  91.70488166  -25.81764267    0.        ]\n",
+      " [  60.04388595  -88.93191702    0.        ]\n",
+      " [ 126.53097963  -62.59938663    0.        ]\n",
+      " [  67.88924301  -63.86804317    0.        ]\n",
+      " [  28.28665329 -121.35342267    0.        ]\n",
+      " [  12.74021557  -99.14059886    0.        ]\n",
+      " [ -84.26434787  -73.55357041    0.        ]\n",
+      " [   1.19302133 -124.08831762    0.        ]\n",
+      " [ -52.90519131  -42.81127449    0.        ]\n",
+      " [ -59.1144358  -115.66339113    0.        ]\n",
+      " [ -28.86461865  -39.2024591     0.        ]\n",
+      " [-148.99459365   -1.85832848    0.        ]\n",
+      " [-143.00582341   26.43456793    0.        ]\n",
+      " [ -73.37290083   87.97741335    0.        ]\n",
+      " [ -96.80011625   11.48471958    0.        ]\n",
+      " [ -58.08240863   -5.50402991    0.        ]\n",
+      " [ -62.32907201   31.69220005    0.        ]\n",
+      " [-103.24076782   50.63255701    0.        ]\n",
+      " [ -75.1913349    50.5119242     0.        ]\n",
+      " [ 118.30673294   73.5623232     0.        ]\n",
+      " [  -6.18701784   56.54381766    0.        ]\n",
+      " [  15.19369396   58.17131719    0.        ]\n",
+      " [  14.68853656  124.46165709    0.        ]\n",
+      " [ 136.47602459   50.72467338    0.        ]\n",
+      " [  49.58710429  -13.38074043    0.        ]\n",
+      " [ 147.28968027   18.41958313    0.        ]\n",
+      " [  74.49637178  -10.37173501    0.        ]\n",
+      " [  30.25293291  -53.08083208    0.        ]\n",
+      " [  64.48838275  -29.35885105    0.        ]\n",
+      " [  80.34013121  -44.8123557     0.        ]\n",
+      " [  98.91407591   -4.47571678    0.        ]\n",
+      " [  38.92290826  -31.96927266    0.        ]\n",
+      " [ 110.45092351  -40.88121852    0.        ]\n",
+      " [ -88.59243622 -101.13925198    0.        ]\n",
+      " [-100.31669255  -55.76760451    0.        ]\n",
+      " [  -6.29576787  -38.19730036    0.        ]\n",
+      " [-127.86501207  -60.4694553     0.        ]\n",
+      " [ -14.21067271  -58.33392879    0.        ]\n",
+      " [-103.75368837  -10.65617513    0.        ]\n",
+      " [-127.01960667  -15.54571224    0.        ]\n",
+      " [ -34.84464814   -3.34809362    0.        ]\n",
+      " [ -90.95024086  -30.02697065    0.        ]\n",
+      " [ -89.26020434   69.24709968    0.        ]\n",
+      " [-132.57573603   51.47975525    0.        ]\n",
+      " [-114.26708554   30.59190933    0.        ]\n",
+      " [ -24.62614885   97.77141299    0.        ]\n",
+      " [  -2.29687736   17.85072963    0.        ]\n",
+      " [-117.38087153   73.86745887    0.        ]\n",
+      " [ -37.37523142   73.29877037    0.        ]\n",
+      " [ -40.29546691  119.34656979    0.        ]\n",
+      " [   6.58925343   37.4723605     0.        ]\n",
+      " [ -60.68889585   69.1937756     0.        ]\n",
+      " [  50.05665203   93.94717044    0.        ]\n",
+      " [ -15.49184873   35.4011233     0.        ]\n",
+      " [  92.30028189   66.21563382    0.        ]\n",
+      " [ -13.23701568  123.47082217    0.        ]\n",
+      " [  74.2244461    82.83137942    0.        ]\n",
+      " [ 139.48326159  -38.03202477    0.        ]\n",
+      " [  80.96650886   10.97849906    0.        ]\n",
+      " [  58.44975195    6.04062323    0.        ]\n",
+      " [ 118.99298661  -19.48746244    0.        ]\n",
+      " [  83.96294213  -80.0241017     0.        ]\n",
+      " [   2.19403203  -18.74223289    0.        ]\n",
+      " [  82.31602337 -105.35590592    0.        ]\n",
+      " [  53.00989063  -48.01881478    0.        ]\n",
+      " [  97.86889955  -60.24666123    0.        ]\n",
+      " [   0.16989698  -78.2607705     0.        ]\n",
+      " [ -37.37057192 -100.95736742    0.        ]\n",
+      " [  54.93684393 -115.2047333     0.        ]\n",
+      " [ -27.49212906 -123.8807152     0.        ]\n",
+      " [ -20.50309764  -20.08299017    0.        ]\n",
+      " [-110.12869136  -81.84845102    0.        ]\n",
+      " [ -45.23757072  -79.2307807     0.        ]\n",
+      " [ -43.95178024  -22.74172975    0.        ]\n",
+      " [ -11.61280956 -101.02084876    0.        ]\n",
+      " [-114.23396161  -36.54246443    0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round_trip.v)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
