Add a todo for dominic.

--- a/hangout_9_12_2017.md
+++ b/hangout_9_12_2017.md
@@ -5,6 +5,7 @@
 - How are we going to collaborate?
   One option is to use the ion-trapping-notes repo.
   Another option is to start a new repo.
+  Dominic to send notes on how to get changes from this repo.
   
 - Have you been able to check out one of the examples? Have you run into any
   issues thus far?
@@ -15,7 +16,7 @@
   . Preliminary confirmation of one-to-two-plane transition.
     * The transition frequency is in the right ball park.
     * But need better data. Simulations were somewhat over damped so transition
-    is a bit washed out.
+      is a bit washed out.
 
 
 ## Modeling of Kerr effect in ultra-cold ion crystals
