Some markdown fixes in hangout notes.

--- a/hangout_9_12_2017.md
+++ b/hangout_9_12_2017.md
@@ -9,14 +9,13 @@
   
 - Have you been able to check out one of the examples? Have you run into any
   issues thus far?
-  . With the code or examples.
-  . With git or other tools.
+  * With the code or examples.
+  * With git or other tools.
   
-- Update from me:
-  . Preliminary confirmation of one-to-two-plane transition.
-    * The transition frequency is in the right ball park.
-    * But need better data. Simulations were somewhat over damped so transition
-      is a bit washed out.
+- Update from me: Preliminary confirmation of one-to-two-plane transition.
+  * The transition frequency is in the right ball park.
+  * But need better data. Simulations were somewhat over damped so transition
+    is a bit washed out.
 
 
 ## Modeling of Kerr effect in ultra-cold ion crystals
@@ -24,10 +23,10 @@
 - First we need to establish the unperturbed mode frequency (because we're
   interested in a level shift).
 - Create initial conditions:
-  . Ground state
-  . Excite one of the drum head modes (not the center of mass mode)
-  . Let the simulation run and record the ion trajectories
-  . After some time compute the spectrum of the axial ion motion (PSD, we have
+  * Ground state
+  * Excite one of the drum head modes (not the center of mass mode)
+  * Let the simulation run and record the ion trajectories
+  * After some time compute the spectrum of the axial ion motion (PSD, we have
     example code snippets for how to do that)
 - Then do the same thing but in addition to exciting the mode from above also
   excite one other mode. This should give the Kerr shifted frequency. Compare
