--- a/cooling/cooling.tex
+++ b/cooling/cooling.tex
@@ -1,5 +1,5 @@
 % -*- mode: latex; fill-column: 65; -*-
-\documentclass[aps, pra, preprint]{revtex4-1}
+\documentclass[aps, pra, twocolumn]{revtex4-1}
 \usepackage{todonotes}
 \usepackage{amssymb}
 \usepackage{amsmath}
@@ -16,15 +16,14 @@
 
 \title{Computational analysis of laser cooling of ultra-cold ions
   in Penning traps
-  \todo{More imaginative title}
 }
 
-\author{Dominic Meiser\\
-\todo{Fix author affiliations}
-}
-\affiliation{Timble Inc, ...}
+\author{Dominic Meiser}
+\affiliation{Trimble Inc, Boulder, 4730 Walnut Street, Suite 201,
+Boulder, CO 80301, USA.}
 \author{John J Bollinger}
-\affiliation{NIST}
+\affiliation{National Institute of Standards and Technology,
+Boulder, Colorado 80305, USA.}
 
 \begin{abstract}
   Here goes the abstract.
