Fix free Hamiltonian: sign and units.
Will have to double check.

--- a/cooling/cooling.tex
+++ b/cooling/cooling.tex
@@ -133,8 +133,8 @@ where the free Hamiltonian
 \begin{equation}
   \hfree =
   \sum_{i=1}^N \frac{1}{2m_i}\left(
-    \mathbf{p}_i +
-    \frac{q_i}{c}\mathbf{A}(\mathbf{x}_i) \right)^2 
+    \mathbf{p}_i -
+    q_i\mathbf{A}(\mathbf{x}_i) \right)^2 
 \end{equation}
 includes the vector potential $\mathbf{A}$ corresponding to the
 axial magnetic field in the Penning trap, $\mathbf{B} =
