Improve link to paper in hangout notes.

--- a/hangout_9_28_2017.md
+++ b/hangout_9_28_2017.md
@@ -3,9 +3,7 @@
 
 ## Update from Dominic
 
-- Started work on a paper on in-plane modes and finite
-  temperature modeling of drumhead modes:
-  [paper](./cooling/cooling.tex)
+- Started work on a [paper on in-plane modes and finite temperature modeling of drumhead modes](./cooling/cooling.tex)
 - Single-plane to multi-plane instability.
 - Spectra of drumhead modes.
 
