Some notes on next steps for Kerr effect simulations.

--- a/hangout_9_28_2017.md
+++ b/hangout_9_28_2017.md
@@ -3,11 +3,24 @@
 
 ## Update from Dominic
 
-- Started work on a [paper on in-plane modes and finite temperature modeling of drumhead modes](./cooling/cooling.tex)
+- Started work on a
+  [paper on in-plane modes and finite temperature modeling of drumhead modes](./cooling/cooling.tex).
+  This may be worth looking at because it hase some background on
+  the physics, computational algorithms, etc. But currently still
+  in pretty rough shape.
 - Single-plane to multi-plane instability.
 - Spectra of drumhead modes.
 
 
 ## Bjorn status
+
+- Create initial conditions
+- Ground state from uE
+- Add sin(kx) to z component
+- Verify that initial state looks reasonable
+- Let simulations run
+- Record ion positions
+- PSD
+- Compare with axial spectra from `mode_analysis.py`
 
 
